Update workflow to trigger on MCW-01 branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: Run test suite for project
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, MCW-01 ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, MCW-01 ]
 
 jobs:
   build:
